# template-sveltekit-tailwind

./: .env.development  .env.example  .eslintignore  .eslintrc.cjs  .firebaserc  .gitignore  .gitpod.yml  .prettierignore  .prettierrc  Dockerfile  README.md  SECURITY.md  firebase.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs
.firebase/: hosting.ZGlzdA.cache
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: desktop.yml  docker.yml  firebase-hosting-pull-request.yml  firebase.yml  nightly.yml  npm.yml  tauri.yml
client/: Dockerfile  package.json  svelte.config.js
client/src/: app.html
client/src/lib/: firebase.js  index.js
client/src/lib/firebase/: FirebaseApp.svelte  firebase.ts  store.ts
client/src/lib/forms/: Form.svelte
client/src/lib/login/: LoginForm.svelte  index.js  webauthn.js
client/src/lib/maps/: Map.svelte  (+3 more)
client/src/routes/: +layout.svelte
functions/: package.json
functions/ssrServer/: index.js
src/: app.d.ts  app.html  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Dashboard.svelte  constants.js  constants.ts  heatmap.ts  index.ts
src/lib/api/: realworld.ts
src/lib/cmp/: Appbar.svelte  Footer.svelte  Hero.svelte  Navbar.svelte  index.ts
src/lib/firebase/: FirebaseApp.svelte  LoginBtn.svelte  LoginForm.svelte  LoginWithBtn.svelte  firebase.config.js  firebase.config.ts  index.ts  store.ts
src/lib/maps/: index.js  maps.js
src/lib/misc/: index.js
src/lib/models/: cities.ts  comments.ts  index.ts  posts.ts  profiles.ts
src/lib/nav/: index.js
src/lib/stores/: index.ts  settings.ts
src/lib/types/: filters.ts  index.ts  misc.ts  session.ts  settings.ts  users.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/(auth)/: +layout.server.ts  +layout.svelte
src/routes/(dashboard)/: +layout.svelte
src/routes/feed/: +page.server.ts  +page.svelte  +page.ts
src/routes/login/: +page.svelte
src/routes/maps/: +page.server.ts  +page.svelte  +page.ts
src/routes/profile/: +page.server.ts  +page.svelte  +page.ts
src/routes/session/: +server.ts
src/routes/settings/: +page.svelte
(+60 files in other folders)
