[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
build = "src/build.rs"
default-run = "template-sveltekit-tailwind"
description = "A Tauri App"
edition = "2018"
license = "Apache-2.0"
name = "template-sveltekit-tailwind"
repository = "https://github.com/FL03/template-sveltekit-tailwind"
version = "0.0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]
tauri-build = { features = [], version = "2.0.0-alpha.8" }

[dependencies]
serde = { features = ["derive"], version = "1" }
serde_json = "1"
tauri = { features = ["devtools", "shell-open"], version = "2.0.0-alpha.8" }
